--- a/views/Elige_Temas/Elige_Tema_Vista-3.html
+++ b/views/Elige_Temas/Elige_Tema_Vista-3.html
@@ -61,10 +61,11 @@
                                                                                                                                             <li class="prioridad-baja">  Baja </li>
                                                                                                                                                 </ul>
                                                                                                                                     </div>
-
-                                                                                                                                    <div class="container-botom-crear_perfil">
-                                                                                                                                        <img class="icono-botom" src="../../imgs/Foto_Perfil_imgs/icono_crear-perfil.png">
-                                                                                                                                        <h1 class="texto-botom"><a href=""> Crear Perfil </a></h1>
-                                                                                                                                    </div>
+                                                                                                                                    <a href="../../home/home.html">
+                                                                                                                                        <div class="container-botom-crear_perfil">
+                                                                                                                                            <img class="icono-botom" src="../../imgs/Foto_Perfil_imgs/icono_crear-perfil.png">
+                                                                                                                                            <h1 class="texto-botom"><a href=""> Crear Perfil </a></h1>
+                                                                                                                                        </div>
+                                                                                                                                    </a>
 </body>
 </html>
