--- a/views/Foto_Perfil/CIMG_Vista_3.html
+++ b/views/Foto_Perfil/CIMG_Vista_3.html
@@ -63,9 +63,11 @@
                                                                                                                                         <div class="sin-conseguir">
                                                                                                                                             <img class="img-bloqueada-2" src="../../imgs/Foto_Perfil_imgs/2-img-bloqueada.png">
                                                                                                                                         </div>
-                                                                                                                                        <div class="container-finalizar_cambio">
-                                                                                                                                            <h1 class="finalizar-cambio"> <a href="../Foto_Perfil/EIMG_Vista_1.html"> Finalizar Cambio</a></h1>
-                                                                                                                                        </div>
+                                                                                                                                        <a href="../../home/home.html">
+                                                                                                                                            <div class="container-finalizar_cambio">
+                                                                                                                                                <h1 class="finalizar-cambio"> <a href="../Foto_Perfil/EIMG_Vista_1.html"> Finalizar Cambio</a></h1>
+                                                                                                                                            </div>
+                                                                                                                                        </a>
 
 
                                                             
