--- a/views/Foto_Perfil/EIMG_Vista_2.html
+++ b/views/Foto_Perfil/EIMG_Vista_2.html
@@ -61,10 +61,11 @@
                                                                                                                                     <h1 class="r_campo-5_1"> Estrellas</h1>
                                                                                                                             
                                                                 </div>
-                                                                        
+                                                                <a href="../../home/home.html">
                                                                 <div class="container-finalizar_cambio">
                                                                     <h1 class="finalizar-cambio"> <a href="../Foto_Perfil/EIMG_Vista_1.html"> Finalizar Cambio</a></h1>
                                                                 </div>
+                                                                </a>
 
                                                             
 </body>
