--- a/views/Foto_Perfil/CIMG_Vista_2.html
+++ b/views/Foto_Perfil/CIMG_Vista_2.html
@@ -64,9 +64,11 @@
                                                                                                                                             <div class="sin-conseguir">
                                                                                                                                                 <img class="img-bloqueada-1" src="../../imgs/Foto_Perfil_imgs/1-img-bloqueada.png">
                                                                                                                                             </div>
+                                                                                                                                            <a href="../../home/home.html">
                                                                                                                                             <div class="container-finalizar_cambio">
                                                                                                                                                 <h1 class="finalizar-cambio"> <a href="../Foto_Perfil/EIMG_Vista_1.html"> Finalizar Cambio</a></h1>
                                                                                                                                             </div>
+                                                                                                                                            </a>
                                                                                                                                             
 
 
