--- a/views/niveles/isla1-2.html
+++ b/views/niveles/isla1-2.html
@@ -8,41 +8,41 @@
 </head>
 <body>
     <div class="flecha_izquierda">
-        <a href="../niveles/isla7-8.html">
-         <img src="../../img/niveles/flecha.izquierda.PNG" alt="flecha izquierda">
+        <a href="../../home/home.html">
+         <img src="../../imgs/niveles/flecha.izquierda.PNG" alt="flecha izquierda">
         </a>
     </div>
     <div class="boton1"> <a href="../niveles/nivel1.html">
-        <img src="../../img/niveles/boton.png" alt="boton"></a>
+        <img src="../../imgs/niveles/boton.png" alt="boton"></a>
     </div>
        
     <div class="container">
         <div class="subject">
-            <img src="../../img/niveles/img.nivel1.PNG" alt="Matemáticas">
+            <img src="../../imgs/niveles/img.nivel1.PNG" alt="Matemáticas">
         </div>
             <div class="recorrido">
-         <img src="../../img/niveles/recorrido.png" alt="reccorido">
+         <img src="../../imgs/niveles/recorrido.png" alt="reccorido">
         </div>
     
         <div class="subject">
-            <img src="../../img/niveles/img.nivel2.PNG" alt="Lenguaje y Lectura">
+            <img src="../../imgs/niveles/img.nivel2.PNG" alt="Lenguaje y Lectura">
         </div>
 
         <div class="titulo1">
-            <img src="../../img/niveles/titulo1.png" alt="Matemáticas">
+            <img src="../../imgs/niveles/titulo1.png" alt="Matemáticas">
            
         </div>
          <br>
         <div class="titulo2">
-            <img src="../../img/niveles/titulo2.png" alt="lenguaje y lectura">
+            <img src="../../imgs/niveles/titulo2.png" alt="lenguaje y lectura">
         </div>
     </div>
     <div class="boton2"> <a href="../niveles/nivel2.html">
-        <img src="../../img/niveles/boton.png" alt="boton"></a>
+        <img src="../../imgs/niveles/boton.png" alt="boton"></a>
     </div>
     <div class="flecha_derecha">
         <a href="../niveles/isla3-4.html">
-        <img src="../../img/niveles/flecha.izquierda.PNG" alt=" flecha derecha">
+        <img src="../../imgs/niveles/flecha.izquierda.PNG" alt=" flecha derecha">
     </a>
     </div>
 </body>
