--- a/views/niveles/isla5-6.html
+++ b/views/niveles/isla5-6.html
@@ -8,40 +8,40 @@
 </head>
 <body>
     <div class="flecha_izquierda"><a href="../niveles/isla3-4.html">
-         <img src="../../img/niveles/flecha.izquierda.PNG" alt="flecha izquierda">
+         <img src="../../imgs/niveles/flecha.izquierda.PNG" alt="flecha izquierda">
         </a>
     </div>
     <div class="boton1"> <a href="../niveles/nivel5.html">
-        <img src="../../img/niveles/boton.png" alt="boton"></a>
+        <img src="../../imgs/niveles/boton.png" alt="boton"></a>
     </div>
        
     <div class="container">
         <div class="subject">
-            <img src="../../img/niveles/nivel5.png" alt="historia y cultura">
+            <img src="../../imgs/niveles/nivel5.png" alt="historia y cultura">
         </div>
             <div class="recorrido">
-         <img src="../../img/niveles/recorrido.png" alt="reccorido">
+         <img src="../../imgs/niveles/recorrido.png" alt="reccorido">
         </div>
     
         <div class="subject">
-            <img src="../../img/niveles/nivel6.png" alt="astronomia">
+            <img src="../../imgs/niveles/nivel6.png" alt="astronomia">
         </div>
 
         <div class="titulo1">
-            <img src="../../img/niveles/titulo5.png" alt="historia y cultura">
+            <img src="../../imgs/niveles/titulo5.png" alt="historia y cultura">
            
         </div>
          <br>
         <div class="titulo2">
-            <img src="../../img/niveles/titulo6.png" alt="astronomia">
+            <img src="../../imgs/niveles/titulo6.png" alt="astronomia">
         </div>
     </div>
     <div class="boton2"> <a href="../niveles/nivel6.html">
-        <img src="../../img/niveles/boton.png" alt="boton"></a>
+        <img src="../../imgs/niveles/boton.png" alt="boton"></a>
     </div>
     <div class="flecha_derecha">
         <a href="../niveles/isla7-8.html">
-        <img src="../../img/niveles/flecha.izquierda.PNG" alt=" flecha derecha">
+        <img src="../../imgs/niveles/flecha.izquierda.PNG" alt=" flecha derecha">
     </a>
     </div>
 </body>
