--- a/views/retos/conjuntos-result2.html
+++ b/views/retos/conjuntos-result2.html
@@ -5,44 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista de Materias</title>
     <link rel="stylesheet" href="../../styles/retos/conjuntos-result2.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
 </head>
 <body>       
     <div class="container">
        
        
         <div class="subject1">
-            <img src="../../img/retos/brillo1.png" alt="brillo amarillo">
+            <img src="../../imgs/retos/brillo1.png" alt="brillo amarillo">
 
             <div class="mango"><a href="../retos/conjuntos-result3.html">
-                <img src="../../img/retos/mango.png" alt="mango">
+                <img src="../../imgs/retos/mango.png" alt="mango">
             </a>
             </div>
             <div class="banana"><a href="../retos/conjuntos-result3.html">
-                <img src="../../img/retos/banana.png" alt="banana">
+                <img src="../../imgs/retos/banana.png" alt="banana">
             </a>
             </div>
             <div class="limon"><a href="../retos/conjuntos-result3.html">
-                <img src="../../img/retos/limon.png" alt="limon">
+                <img src="../../imgs/retos/limon.png" alt="limon">
             </a>
             </div>
         </div> 
         <h1>3</h1>   
         <div class="subject2">
-            <img src="../../img/retos/brillo2.png" alt="brillo rojo">
+            <img src="../../imgs/retos/brillo2.png" alt="brillo rojo">
 
             
             <div class="cereza"><a href="../retos/conjuntos-result3.html">
-                <img src="../../img/retos/cereza.png" alt="cereza">
+                <img src="../../imgs/retos/cereza.png" alt="cereza">
             </a>
             </div>
             <div class="fresa">
                 <a href="../retos/conjuntos-result3.html">
-                <img src="../../img/retos/fresa.png" alt="fresa">
+                <img src="../../imgs/retos/fresa.png" alt="fresa">
             </a>
             </div>
             <div class="manzana">
                 <a href="../retos/conjuntos-result3.html">
-                <img src="../../img/retos/manzana.png" alt="manzana">
+                <img src="../../imgs/retos/manzana.png" alt="manzana">
             </a>
             </div>
         </div>
