--- a/views/retos/reto-principal.html
+++ b/views/retos/reto-principal.html
@@ -5,28 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vista de retos</title>
     <link rel="stylesheet" href="../../styles/retos/reto-principal.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="fondo2">
-            <img src="../../img/retos/fondo2.png" alt="rocas">
+            <img src="../../imgs/retos/fondo2.png" alt="rocas">
         </div>
-        <div class="flecha">
-            <img src="../../img/retos/flecha.png" alt="flecha">
+        <div class="flecha"><a href="../../home/home.html">
+            <img src="../../imgs/retos/flecha.png" alt="flecha">
+        </a>
         </div>
         <div class="wooper-reto">
-            <img src="../../img/retos/wooper.reto.png" alt="wooper-reto">
+            <img src="../../imgs/retos/wooper.reto.png" alt="wooper-reto">
         </div>
         <div class="contexto">
             <h1>Desafio de la semana</h1>
 
-            <img src="../../img/retos/dialogo.png" alt="nube de dialogo">
+            <img src="../../imgs/retos/dialogo.png" alt="nube de dialogo">
             <h2>Desafío de conjuntos de números,<br>
                  aprende a organizar  y agrupar <br>
                  objetos según sus características  </h2>
         </div>
         <div class="boton"><a href="../retos/conjuntos.html">
-            <img src="../../img/retos/boton.png" alt="boton de incio del reto">
+            <img src="../../imgs/retos/boton.png" alt="boton de incio del reto">
             <h1>Vamos</h1>
         </a>
         </div>
