--- a/styles/niveles/nivel6.css
+++ b/styles/niveles/nivel6.css
@@ -1,13 +1,24 @@
 
 body{
 
-    background-image: url("../../img/niveles/fondo6.png");
+    background-image: url("../../imgs/niveles/fondo6.png");
     background-repeat: no-repeat;
     background-size: cover; 
     position: relative;
     font-family: 'Pajji', sans-serif;
 }
+.container {
 
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 90%;
+    left: 200px;
+    top: 50px;
+}
 .level1{
     
 display: flex;
