--- a/styles/retos/conjuntos.css
+++ b/styles/retos/conjuntos.css
@@ -7,11 +7,14 @@ body{
     margin: 0;
 }
 .container{
+    position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 90%;
     height: 90%;
+    left: 200px;
     
     background-color: #f5cc70;
     border-radius: 20px;
