--- a/styles/retos/reto-nuevo.css
+++ b/styles/retos/reto-nuevo.css
@@ -3,7 +3,7 @@ body{
     justify-content: start;
     align-items: start;
     background-color:rgb(174, 232, 250);
-    background-image: url("../../img/retos/fondo1.png");
+    background-image: url("../../imgs/retos/fondo1.png");
     background-size: 50%;
     background-repeat: no-repeat;
 
@@ -11,6 +11,7 @@ body{
 
 header{
     opacity: 0.5;
+
 }
 
 
@@ -27,7 +28,8 @@ top: 33px;
 border-radius: 50%;
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 background-color: rgb(112, 212, 219);
-z-index:-1;
+transform: rotate(-180deg);
+z-index:1;
 }
 
 .flecha img{
@@ -165,7 +167,7 @@ justify-content: center;
 position: absolute;
 width: 622px;
 height: 735px;
-left: 337px;
+left: 600px;
 top: 54px;
 
 background: #FFFFFF;
