--- a/styles/retos/reto-principal.css
+++ b/styles/retos/reto-principal.css
@@ -3,7 +3,7 @@ body{
     justify-content: start;
     align-items: start;
     background-color:rgb(174, 232, 250);
-    background-image: url("../../img/retos/fondo1.png");
+    background-image: url("../../imgs/retos/fondo1.png");
     background-size: 50%;
     
     background-repeat: no-repeat;
@@ -21,7 +21,8 @@ top: 33px;
 border-radius: 50%;
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 background-color: rgb(112, 212, 219);
-z-index:-1;
+transform: rotate(-180deg);
+z-index:2;
 }
 
 .flecha img{
@@ -33,6 +34,8 @@ justify-content: center;
 align-items: center;
 width: 37.5px;
 height: 36.6px;
+top: 5px;
+left: 5px;
 }
 
 .fondo2{
