--- a/styles/sugerencias/sugerencia2.css
+++ b/styles/sugerencias/sugerencia2.css
@@ -2,7 +2,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-        background-image: url("../../img/sugerencias/fondo1.png");
+        background-image: url("../../imgs/sugerencias/fondo1.png");
         background-size: cover;
         background-repeat: no-repeat;
     }
@@ -16,8 +16,8 @@ body{
     align-items: center;
     width: 60px;
     height: 60px;
-    left: 1300px;
-    top: 27px;
+    left: 1500px;
+    top: 100px;
     background-color:  #5BAA58;
     border-radius: 50%;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -31,6 +31,8 @@ body{
     align-items: center;
     width: 50px;
     height: 50px;
+    top: 9px;
+left: 10px;
     }
     
     .titulo1 img{
@@ -39,8 +41,8 @@ body{
     position: absolute;
     width: 419px;
     height: 125px;
-    left: 28px;
-    top: 14px;
+    left: 150px;
+    top: 80px;
     }
     
     .titulo1 h1{
@@ -49,8 +51,8 @@ body{
     position: absolute;
     width: 347px;
     height: 82px;
-    left: 100px;
-    top: 15px;
+    left: 200px;
+    top: 75px;
     
     font-family: 'Happy Monkey';
     font-style: normal;
