--- a/views/niveles/isla3-4.html
+++ b/views/niveles/isla3-4.html
@@ -8,40 +8,40 @@
 </head>
 <body>
     <div class="flecha_izquierda"> <a href="../niveles/isla1-2.html">
-        <img src="../../img/niveles/flecha.izquierda.PNG" alt="flecha izquierda">
+        <img src="../../imgs/niveles/flecha.izquierda.PNG" alt="flecha izquierda">
     </a>
     </div>
     <div class="boton1"> <a href="../niveles/nivel3.html">
-        <img src="../../img/niveles/boton.png" alt="boton"></a>
+        <img src="../../imgs/niveles/boton.png" alt="boton"></a>
     </div>
        
     <div class="container">
         <div class="subject">
-            <img src="../../img/niveles/nivel3.png" alt="ciencias naturales">
+            <img src="../../imgs/niveles/nivel3.png" alt="ciencias naturales">
         </div>
             <div class="recorrido">
-         <img src="../../img/niveles/recorrido.png" alt="reccorido">
+         <img src="../../imgs/niveles/recorrido.png" alt="reccorido">
         </div>
     
         <div class="subject">
-            <img src="../../img/niveles/nivel4.png" alt="arte y creatividad">
+            <img src="../../imgs/niveles/nivel4.png" alt="arte y creatividad">
         </div>
 
         <div class="titulo1">
-            <img src="../../img/niveles/titulo3.png" alt="ciencias naturales">
+            <img src="../../imgs/niveles/titulo3.png" alt="ciencias naturales">
            
         </div>
          <br>
         <div class="titulo2">
-            <img src="../../img/niveles/titulo4.png" alt="arte y creatividad">
+            <img src="../../imgs/niveles/titulo4.png" alt="arte y creatividad">
         </div>
     </div>
     <div class="boton2"> <a href="../niveles/nivel4.html">
-        <img src="../../img/niveles/boton.png" alt="boton"></a>
+        <img src="../../imgs/niveles/boton.png" alt="boton"></a>
     </div>
     <div class="flecha_derecha">
         <a href="../niveles/isla5-6.html">
-        <img src="../../img/niveles/flecha.izquierda.PNG" alt=" flecha derecha">
+        <img src="../../imgs/niveles/flecha.izquierda.PNG" alt=" flecha derecha">
     </a>
     </div>
 </body>
