--- a/views/niveles/isla7-8.html
+++ b/views/niveles/isla7-8.html
@@ -9,40 +9,40 @@
 <body>
     <div class="flecha_izquierda">
         <a href="../niveles/isla5-6.html"> 
-            <img src="../../img/niveles/flecha.izquierda.PNG" alt="flecha izquierda">
+            <img src="../../imgs/niveles/flecha.izquierda.PNG" alt="flecha izquierda">
         </a>
     </div>
     <div class="boton1"> <a href="../niveles/nivel7.html">
-        <img src="../../img/niveles/boton.png" alt="boton"></a>
+        <img src="../../imgs/niveles/boton.png" alt="boton"></a>
     </div>
        
     <div class="container">
         <div class="subject">
-            <img src="../../img/niveles/nivel7.png" alt="geografia">
+            <img src="../../imgs/niveles/nivel7.png" alt="geografia">
         </div>
             <div class="recorrido">
-         <img src="../../img/niveles/recorrido.png" alt="reccorido">
+         <img src="../../imgs/niveles/recorrido.png" alt="reccorido">
         </div>
     
         <div class="subject">
-            <img src="../../img/niveles/nivel8.png" alt="programacion">
+            <img src="../../imgs/niveles/nivel8.png" alt="programacion">
         </div>
 
         <div class="titulo1">
-            <img src="../../img/niveles/titulo7.png" alt="geografia">
+            <img src="../../imgs/niveles/titulo7.png" alt="geografia">
            
         </div>
          <br>
         <div class="titulo2">
-            <img src="../../img/niveles/titulo8.png" alt="programacion">
+            <img src="../../imgs/niveles/titulo8.png" alt="programacion">
         </div>
     </div>
     <div class="boton2"> <a href="../niveles/nivel8.html">
-        <img src="../../img/niveles/boton.png" alt="boton"></a>
+        <img src="../../imgs/niveles/boton.png" alt="boton"></a>
     </div>
     <div class="flecha_derecha">
         <a href="../niveles/isla1-2.html">
-        <img src="../../img/niveles/flecha.izquierda.PNG" alt=" flecha derecha">
+        <img src="../../imgs/niveles/flecha.izquierda.PNG" alt=" flecha derecha">
     </a>
     </div>
 </body>
