--- a/views/niveles/nivel3.html
+++ b/views/niveles/nivel3.html
@@ -8,45 +8,45 @@
     <link href="https://fonts.googleapis.com/css2?family=Pajji&display=swap" rel="stylesheet">
 </head>
 <body>
-         <section>
+         <div class="container">
             <div class="flecha">
                 <a href="../niveles/isla3-4.html">
-                <img src="../../img/niveles/flecha.izquierda.PNG" alt="flecha inicio">
+                <img src="../../imgs/niveles/flecha.izquierda.PNG" alt="flecha inicio">
             </a>
             </div>
-            <div class="estrella1"><img src="../../img/niveles/estrella1.PNG" alt="estrella1"></div>
-            <div class="estrella2"><img src="../../img/niveles/estrella2.PNG" alt="estrella2"></div>
-            <div class="estrella3"><img src="../../img/niveles/estrella1.PNG" alt="estrella3"></div>
+            <div class="estrella1"><img src="../../imgs/niveles/estrella1.PNG" alt="estrella1"></div>
+            <div class="estrella2"><img src="../../imgs/niveles/estrella2.PNG" alt="estrella2"></div>
+            <div class="estrella3"><img src="../../imgs/niveles/estrella1.PNG" alt="estrella3"></div>
         
-            <div class="estrella4"><img src="../../img/niveles/estrella1.PNG" alt="estrella1"></div>
-            <div class="estrella5"><img src="../../img/niveles/estrella2.PNG" alt="estrella2"></div>
-            <div class="estrella6"><img src="../../img/niveles/estrella1.PNG" alt="estrella3"></div>
+            <div class="estrella4"><img src="../../imgs/niveles/estrella1.PNG" alt="estrella1"></div>
+            <div class="estrella5"><img src="../../imgs/niveles/estrella2.PNG" alt="estrella2"></div>
+            <div class="estrella6"><img src="../../imgs/niveles/estrella1.PNG" alt="estrella3"></div>
         
-            <div class="estrella7"><img src="../../img/niveles/estrella1.PNG" alt="estrella1"></div>
-            <div class="estrella8"><img src="../../img/niveles/estrella2.PNG" alt="estrella2"></div>
-            <div class="estrella9"><img src="../../img/niveles/estrella1.PNG" alt="estrella3"> </div>
+            <div class="estrella7"><img src="../../imgs/niveles/estrella1.PNG" alt="estrella1"></div>
+            <div class="estrella8"><img src="../../imgs/niveles/estrella2.PNG" alt="estrella2"></div>
+            <div class="estrella9"><img src="../../imgs/niveles/estrella1.PNG" alt="estrella3"> </div>
        
         <div class="wooper1">
-             <img src="../../img/niveles/wooper3.png" alt="wooper de naturales">
+             <img src="../../imgs/niveles/wooper3.png" alt="wooper de naturales">
         </div>
         <div class="level1">
             <h1>1</h1>
         </div>
         <div class="level2">
-            <img src="../../img/niveles/candado.png" alt="candado2">
+            <img src="../../imgs/niveles/candado.png" alt="candado2">
         </div>
         <div class="level3">
-            <img src="../../img/niveles/candado.png" alt="candado3">
+            <img src="../../imgs/niveles/candado.png" alt="candado3">
         </div>
         <div class="descripcion">
-            <img class="desNaturales" src="../../img/niveles/naturales.png" alt="anuncio">
+            <img class="desNaturales" src="../../imgs/niveles/naturales.png" alt="anuncio">
             <div class="cerrar"> <a href="../niveles/nivel3.1.html">
-                <img src="../../img/niveles/x.png" alt="cerrar">
+                <img src="../../imgs/niveles/x.png" alt="cerrar">
             </a>
         </div>
         </div>
        
-    </section>
+    </div>
     
 </body>
 </html>
