--- a/views/retos/conjuntos-result3.html
+++ b/views/retos/conjuntos-result3.html
@@ -5,53 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista de Materias</title>
     <link rel="stylesheet" href="../../styles/retos/conjuntos-result3.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
 </head>
 <body>       
     <div class="container">
     
         <div class="subject1">
-            <img src="../../img/retos/brillo1.png" alt="brillo amarillo">
+            <img src="../../imgs/retos/brillo1.png" alt="brillo amarillo">
 
             <div class="mango"><a href="../retos/conjuntos-result.html">
-                <img src="../../img/retos/mango.png" alt="mango">
+                <img src="../../imgs/retos/mango.png" alt="mango">
             </a>
             </div>
             <div class="banana"><a href="../retos/conjuntos-result.html">
-                <img src="../../img/retos/banana.png" alt="banana">
+                <img src="../../imgs/retos/banana.png" alt="banana">
             </a>
             </div>
             <div class="limon"><a href="../retos/conjuntos-result.html">
-                <img src="../../img/retos/limon.png" alt="limon">
+                <img src="../../imgs/retos/limon.png" alt="limon">
             </a>
             </div>
         </div> 
         <h1>3</h1>   
         <div class="subject2">
-            <img src="../../img/retos/brillo2.png" alt="brillo rojo">
+            <img src="../../imgs/retos/brillo2.png" alt="brillo rojo">
 
             
             <div class="cereza"><a href="../retos/conjuntos-result.html">
-                <img src="../../img/retos/cereza.png" alt="cereza">
+                <img src="../../imgs/retos/cereza.png" alt="cereza">
             </a>
             </div>
             <div class="fresa">
                 <a href="../retos/conjuntos-result.html">
-                <img src="../../img/retos/fresa.png" alt="fresa">
+                <img src="../../imgs/retos/fresa.png" alt="fresa">
             </a>
             </div>
             <div class="manzana">
                 <a href="../retos/conjuntos-result.html">
-                <img src="../../img/retos/manzana.png" alt="manzana">
+                <img src="../../imgs/retos/manzana.png" alt="manzana">
             </a>
             </div>
         </div>
         <h2>3</h2>
         <div class="destellosd">
-            <img src="../../img/retos/destellos.png" alt="destellos">
+            <img src="../../imgs/retos/destellos.png" alt="destellos">
         </div>
         <div class="premio">
             <a href="../retos/reto-nuevo.html">
-            <img src="../../img/retos/premio.png" alt="premio del reto">
+            <img src="../../imgs/retos/premio.png" alt="premio del reto">
             <h1>felicitaciones</h1>
             <h2>has desbloqueado un <br>
                 sombrero. Vuelve el dia<br> 
@@ -60,8 +62,8 @@
                 </a>
         </div>
         <div class="recompensa">
-            <img class="destello2" src="../../img/retos/destellos.png" alt="destello2">
-            <img class="dinero"  src="../../img/retos/dinero.png" alt="bolsa de dinero">
+            <img class="destello2" src="../../imgs/retos/destellos.png" alt="destello2">
+            <img class="dinero"  src="../../imgs/retos/dinero.png" alt="bolsa de dinero">
         </div>
     </div>
 </body>
