--- a/views/retos/conjuntos.html
+++ b/views/retos/conjuntos.html
@@ -5,46 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista de Materias</title>
     <link rel="stylesheet" href="../../styles/retos/conjuntos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
 </head>
 <body>       
     <div class="container">
         <div class="cereza"><a href="../retos/conjuntos-result.html">
-            <img src="../../img/retos/cereza.png" alt="cereza">
+            <img src="../../imgs/retos/cereza.png" alt="cereza">
         </a>
         </div>
         <div class="fresa">
             <a href="../retos/conjuntos-result.html">
-            <img src="../../img/retos/fresa.png" alt="fresa">
+            <img src="../../imgs/retos/fresa.png" alt="fresa">
         </a>
         </div>
         <div class="manzana">
             <a href="../retos/conjuntos-result.html">
-            <img src="../../img/retos/manzana.png" alt="manzana">
+            <img src="../../imgs/retos/manzana.png" alt="manzana">
         </a>
         </div>
         <div class="mango"><a href="../retos/conjuntos-result.html">
-            <img src="../../img/retos/mango.png" alt="mango">
+            <img src="../../imgs/retos/mango.png" alt="mango">
         </a>
         </div>
         <div class="banana"><a href="../retos/conjuntos-result.html">
-            <img src="../../img/retos/banana.png" alt="banana">
+            <img src="../../imgs/retos/banana.png" alt="banana">
         </a>
         </div>
         <div class="limon"><a href="../retos/conjuntos-result.html">
-            <img src="../../img/retos/limon.png" alt="limon">
+            <img src="../../imgs/retos/limon.png" alt="limon">
         </a>
         </div>
         <div class="subject1">
-            <img src="../../img/retos/brillo1.png" alt="brillo amarillo">
+            <img src="../../imgs/retos/brillo1.png" alt="brillo amarillo">
         </div>    
         <div class="subject2">
-            <img src="../../img/retos/brillo2.png" alt="brillo rojo">
+            <img src="../../imgs/retos/brillo2.png" alt="brillo rojo">
         </div>
         <div class="wooper">
-            <img src="../../img/retos/wooper.reto.png" alt="wooper reto">
+            <img src="../../imgs/retos/wooper.reto.png" alt="wooper reto">
         </div>
         <div class="dialogo2"><a href="../retos/conjuntos-result.html">
-            <img src="../../img/retos/dialogo2.png" alt="glo de texto2">
+            <img src="../../imgs/retos/dialogo2.png" alt="glo de texto2">
             <h1>Para tener exíto en este desafío<br>
                  tienes que organizar las frutas<br>
                   según su color dentro del<br>
