--- a/views/sugerencias/sugerencia1.html
+++ b/views/sugerencias/sugerencia1.html
@@ -5,63 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vista de retos</title>
     <link rel="stylesheet" href="../../styles/sugerencias/sugerencia1.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-<div class="boton1">
-    <img src="../../img/sugerencias/flecha.png" alt="flecha">
+<div class="boton1"><a href="../../home/home.html">
+    <img src="../../imgs/sugerencias/flecha.png" alt="flecha">
+</a>
 </div>
 <div class="titulo1">
-    <img src="../../img/sugerencias/titulo1.png" alt="sugerencia1">
+    <img src="../../imgs/sugerencias/titulo1.png" alt="sugerencia1">
     <h1>Sugerencias</h1>
 </div>
 
 <div class="container">
     <div class="matematicas"><a href="../sugerencias/sugerencia2.html">
-        <img src="../../img/sugerencias/matematicas.png" alt="matematicas">
+        <img src="../../imgs/sugerencias/matematicas.png" alt="matematicas">
         <div class="admiracion">
-            <img src="../../img/sugerencias/admiracion.png" alt="admiracion">
+            <img src="../../imgs/sugerencias/admiracion.png" alt="admiracion">
         </div>
         <h1>Matematicas</h1>
     </a>
     </div>
     <div class="lenguaje">
-        <img src="../../img/sugerencias/lenguaje.png" alt="lenguaje">
+        <img src="../../imgs/sugerencias/lenguaje.png" alt="lenguaje">
         <h1>Lenguaje y Lectura</h1>
     </div>
     <div class="ciencias">
-        <img src="../../img/sugerencias/ciencias.png" alt="ciencias">
+        <img src="../../imgs/sugerencias/ciencias.png" alt="ciencias">
         <h1>Ciencias naturales</h1>
     </div>
     <div class="arte">
-        <img src="../../img/sugerencias/arte.png" alt="arte">
+        <img src="../../imgs/sugerencias/arte.png" alt="arte">
         <div class="admiracion">
-            <img src="../../img/sugerencias/admiracion.png" alt="admiracion">
+            <img src="../../imgs/sugerencias/admiracion.png" alt="admiracion">
         </div>
         <h1>Arte y creatividad</h1>
     </div>
     <div class="historia">
-        <img src="../../img/sugerencias/historia.png" alt="historia">
+        <img src="../../imgs/sugerencias/historia.png" alt="historia">
         <h1>Historia y cultura</h1>
     </div>
     <div class="astronomia">
-        <img src="../../img/sugerencias/astronomia.png" alt="astronomia">
+        <img src="../../imgs/sugerencias/astronomia.png" alt="astronomia">
         <h1>Ciencias del espacio</h1>
     </div>
     <div class="geografia">
-        <img src="../../img/sugerencias/geografia.png" alt="geografia">
+        <img src="../../imgs/sugerencias/geografia.png" alt="geografia">
         <h1>Geografia</h1>
     </div>
     <div class="programacion">
-        <img src="../../img/sugerencias/programacion.png" alt="programacion">
+        <img src="../../imgs/sugerencias/programacion.png" alt="programacion">
         <h1>Programacion</h1>
     </div>
     <div class="acertijos">
-        <img src="../../img/sugerencias/acertijos.png" alt="acertijos">
+        <img src="../../imgs/sugerencias/acertijos.png" alt="acertijos">
         <h1>Acertijos</h1>
     </div>
     <div class="tecnologia">
-        <img src="../../img/sugerencias/tecnologia.png" alt="tecnologia">
+        <img src="../../imgs/sugerencias/tecnologia.png" alt="tecnologia">
         <h1>tTecnologia</h1>
     </div>
 
