--- a/views/sugerencias/sugerencia2.html
+++ b/views/sugerencias/sugerencia2.html
@@ -5,25 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vista de retos</title>
     <link rel="stylesheet" href="../../styles/sugerencias/sugerencia2.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
 <div class="boton1">
     <a href="../sugerencias/sugerencia1.html">
-    <img src="../../img/sugerencias/flecha.png" alt="flecha">
+    <img src="../../imgs/sugerencias/flecha.png" alt="flecha">
 </a>
 </div>
 <div class="titulo1">
-    <img src="../../img/sugerencias/titulo1.png" alt="sugerencia1">
+    <img src="../../imgs/sugerencias/titulo1.png" alt="sugerencia1">
     <h1>Sugerencias</h1>
 </div>
 
 <div class="container">
     <div class="wooper">
-        <img src="../../img/sugerencias/wooper.reto.png" alt="mascota">
+        <img src="../../imgs/sugerencias/wooper.reto.png" alt="mascota">
     </div>
     <div class="dialogo">
-        <img src="../../img/sugerencias/dialogo2.png" alt="dialogo">
+        <img src="../../imgs/sugerencias/dialogo2.png" alt="dialogo">
         <h1>Veo que tienes dificuldades con el<br> 
             aréa de matemáticas,<br>
             te sugiero que practiques tus <br>
@@ -32,20 +34,20 @@
             </h1>
     </div>
     <div class="conjunto"><a href="../retos/conjuntos.html">
-        <img src="../../img/sugerencias/conjuntos.png" alt="conjuntos">
+        <img src="../../imgs/sugerencias/conjuntos.png" alt="conjuntos">
         <h1>Conjuntos</h1>
     </a>
     </div>
     <div class="rompecabezas">
-        <img src="../../img/sugerencias/rompecabezas.png" alt="rompecabezas">
+        <img src="../../imgs/sugerencias/rompecabezas.png" alt="rompecabezas">
         <h1>Rompecabezas</h1>
     </div>
     <div class="restar">
-        <img src="../../img/sugerencias/resta.png" alt="restas">
+        <img src="../../imgs/sugerencias/resta.png" alt="restas">
         <h1>Resta</h1>
     </div>
     <div class="sumar">
-        <img src="../../img/sugerencias/suma.png" alt="rsumas">
+        <img src="../../imgs/sugerencias/suma.png" alt="rsumas">
         <h1>Suma</h1>
     </div>
 </div>
